# algolib-rust

./: Cargo.toml  rustfmt.toml
src/: lib.rs  number.rs  traits.rs  utility.rs
src/number/: miller_rabin.rs  modint.rs  primitive_root.rs
src/traits/: algebra.rs  num.rs
src/traits/num/: bounded.rs  signed.rs  zero_one.rs
src/utility/: chmin.rs  chminmax.rs  floored_div.rs  int_div.rs  mod_ops.rs
